--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Bamazon",
   "version": "1.0.0",
-  "description": "",
+  "description": "<!-- Put the name of the project after the # --> <!-- the # means h1  --> # YORSTORE!",
   "main": "bamazonCustomer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/NasibNia/Bamazon#readme",
   "dependencies": {
+    "cfonts": "^2.1.3",
+    "chalk": "^2.4.1",
     "cli-table": "^0.3.1",
     "inquirer": "^6.2.0",
     "mysql": "^2.16.0"
-  }
+  },
+  "devDependencies": {}
 }
